# sinter-lang

./: .gitignore  Cargo.toml  GRAMMAR.MD  LANGUAGE_DESIGN.MD  LICENSE  README.md  TODO.MD
ast/: Cargo.toml
ast/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: arenas.rs  lib.rs
hir/: Cargo.toml
hir/src/: lib.rs
parser/: Cargo.toml
parser/snapshots/: add_and_multiply_idents.snap  class_def_no_trailing_field_comma.snap  comparison.snap  complex_conditional.snap  enum_match.snap  generic_lists.snap  if_stmt.snap  impl_trait.snap  int_match.snap  mutable_assignment.snap  print_fn.snap  returning_error_union.snap  single_value.snap  use_statements.snap
parser/snapshots/src/lib/: add_and_multiply.snap  add_and_multiply_idents.snap  basic_enum.snap  bit_operations.snap  block_stmt.snap  class_constructor.snap  class_def_no_trailing_field_comma.snap  class_def_no_trailing_field_comma_with_self_fns.snap  class_def_trailing_field_comma.snap  class_def_trailing_field_comma_with_self_fns.snap  closure_expression.snap  closure_returns_trait_bound_or_none.snap  comparison.snap  complex_conditional.snap  complex_function_composition.snap  declare_classes_and_vars.snap  double_index_expression.snap  double_infix.snap  double_infix_call.snap  enum_match.snap  enum_message.snap  function_composition.snap  generic_lists.snap  impl_trait.snap  int_match.snap  main_fn.snap  main_fn_with_args.snap  mutable_assignment.snap  nested_generic_path.snap  parenthesized_comparison.snap  parenthesized_expr.snap  print_fn.snap  rectangle_class.snap  returning_error_union.snap  simple_add_func.snap  single_value.snap  trait_vs_generic.snap  use_statements.snap  var_declarations.snap  vector_enum.snap
parser/src/: lib.rs
resolver/: Cargo.toml
resolver/src/: lib.rs
sinter-lang/: Cargo.toml
sinter-lang/arena/src/: lib.rs
sinter-lang/ast/: Cargo.toml
sinter-lang/ast/src/: lib.rs
sinter-lang/benches/: block_allocation.rs  pointer.rs
sinter-lang/diagnostics/src/: lib.rs
sinter-lang/id/: Cargo.toml
sinter-lang/id/src/: lib.rs
sinter-lang/interner/: Cargo.toml
sinter-lang/interner/src/: lib.rs
sinter-lang/resources/test/parser/expression/: add_and_multiply_idents.json  double_index_expression.json
sinter-lang/resources/test/parser/module/: basic_enum.json  use_statements.json
sinter-lang/resources/test/parser/path_expression/: single_path_expr.json
sinter-lang/resources/test/parser/type/: closure_return_closure.json  closure_returns_trait_bound_or_none.json
sinter-lang/resources/test/tokenizer/: complex_enum.json  empty_string.json  for_loop.json  invalid_native_keyword.json  let_stmt_none.json  parameter_parsing.json  scene_graph_node.json  simple_expression.json  simple_iterator_trait.json  small_a_string.json  var_declarations.json
sinter-lang/snapshots/src/compiler/compiler/: complex_arithmetic.snap  simple_arithmetic.snap
sinter-lang/snapshots/src/compiler/parser/: add_and_multiply.json  (+55 more)
sinter-lang/sources/: Cargo.toml
sinter-lang/sources/crates/complex_arithmetic/: multiplication.si  square.si
sinter-lang/sources/crates/enum_matching/: enum_match.si  enum_message.si
sinter-lang/sources/crates/generic_inference/: option.si
sinter-lang/sources/crates/geometry_classes/: geometry_classes.si
sinter-lang/sources/crates/hello_world/: hello_world.si
sinter-lang/sources/crates/path_resolution/: planet.si  planet_calculator.si
sinter-lang/sources/crates/simple_arithmetic/: subtraction.si
sinter-lang/sources/crates/std/: math.si  out.si
sinter-lang/sources/short_examples/: basic_enum.si  classes_and_vars.si  enum_match.si  enum_message.si  generic_lists.si  int_match.si  main_fn.si  match_expression.si  rectangle_class.si  returning_error_union.si  sum_fn.si  trait_vs_generic.si  var_declarations.si  vector_enum.si
sinter-lang/span/: Cargo.toml
sinter-lang/span/src/: lib.rs
sinter-lang/src/: lib.rs  opcode.rs
sinter-lang/src/bytes/: mod.rs  serializable.rs  to_bytes.rs
sinter-lang/src/class/: class.rs  compiled_class.rs  constant_pool.rs  field.rs  mod.rs
sinter-lang/src/compiler/: ast.rs  ast_passes.rs  compiled_module.rs  compiler.rs  errors.rs  hir.rs  interner.rs  krate.rs  mod.rs  parser.rs  path.rs  pool.rs  resolver.rs  ty_checker.rs  ty_infer.rs  type_checker.rs  types.rs  utils.rs  validator.rs
sinter-lang/src/compiler/ast/: ast.rs
sinter-lang/src/compiler/codegen/: code_generator.rs  mod.rs
sinter-lang/src/compiler/hir/: id.rs
sinter-lang/src/compiler/tokens/: token.rs  tokenized_file.rs  tokenizer.rs
sinter-lang/src/compiler/type_inference/: mod.rs  trait_solver.rs  ty_infer.rs  unification.rs
sinter-lang/src/compiler/types/: types.rs
sinter-lang/src/dis/: disassembler.rs
sinter-lang/src/errors/: mod.rs  vm_error.rs
sinter-lang/src/function/: compiled_method.rs  method.rs  mod.rs
sinter-lang/src/gc/: block.rs  byte_map.rs  global_allocator.rs
sinter-lang/src/heap/: mod.rs  region.rs
sinter-lang/src/os/: unix.rs  windows.rs
sinter-lang/src/pointers/: mod.rs  pointer.rs
sinter-lang/src/pool/: internal_function.rs  internal_string.rs  mod.rs  string_pool.rs
sinter-lang/src/traits/: traits.rs
sinter-lang/src/util/: arena.rs  mod.rs  utils.rs
sinter-lang/src/vm/: call_frame.rs  mod.rs  vm.rs
sinter-lang/tokenizer/: Cargo.toml
sinter-lang/tokenizer/src/: lib.rs  token.rs  tokenized_file.rs  tokenizer.rs
sinter-lang/types/: Cargo.toml
snap/: Cargo.toml
snap/snapshots/tests/path/: serialize_complex_struct.json
snap/src/: lib.rs
snap/tests/: compile_failure.rs  file_creation.rs  no_specified_type.rs  no_specified_type.stderr  not_json_serializable.rs  not_json_serializable.stderr  path.rs
snap/tests/ui/: no_specified_type.rs  no_specified_type.stderr  not_json_serializable.rs  not_json_serializable.stderr
snap_macro/: Cargo.toml
snap_macro/src/: lib.rs
ty_infer/: Cargo.toml
ty_infer/src/: lib.rs  trait_solver.rs  unification.rs
typed_hir/: Cargo.toml
typed_hir/src/: lib.rs
validator/: Cargo.toml
validator/snapshots/: duplicate_generic_params.snap
validator/src/: lib.rs
(+320 files in other folders)
