[workspace]

members = [
    "arena",
    "ast", "compiler",
    "diagnostics",
    "hir",
    "id",
    "interner",
    "krate",
    "macros",
    "parser",
    "resolver",
    "sinter-lang",
    "snap",
    "source",
    "span",
    "tests",
    "tokenizer",
    "ty_infer",
    "types",
    "validator"
]

[profile.dev]
opt-level = 0
incremental = true
