[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
id = { path = "../id" }
interner = { path = "../interner" }
krate = { path = "../krate" }
span = { path = "../span" }
types = { path = "../types" }


indexmap = "2.2.2"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
snap = { path = "../snap" }
sources = { path = "../sources" }