[package]
name = "sinter-lang"
version = "0.1.0"
authors = ["Jonathan Vusich <31666175+JonathanVusich@users.noreply.github.com>"]
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
bit-set = "0.5.2"
region = "3.0.0"
winapi = "0.3.9"
rustc-hash = "1.1.0"
libc = "0.2.123"
anyhow = "1.0.57"
unicode-segmentation = "1.9.0"
lasso = { version = "0.6.0", features = ["inline-more", "multi-threaded", "serialize"] }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive", "rc"] }
cfg-if = "1.0.0"
phf = { version = "0.11.0", features = ["macros"] }

snap = { path = "../snap" }


[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "block_allocation"
harness = false

[[bench]]
name = "pointer"
harness = false