[package]
name = "snap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full"]}
quote = "1.0.21"
pathdiff = "0.2.1"