[package]
name = "snap_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full"]}
quote = "1.0.21"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
trybuild = "1.0.64"
