[package]
name = "ty_infer"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }

arena = { path = "../arena" }
ast = { path = "../ast" }
bumpalo = "3.15.4"
diagnostics = { path = "../diagnostics" }
id = { path = "../id" }
macros = { path = "../macros" }
krate = { path = "../krate" }
hir = { path = "../hir" }
typed_hir = { path = "../typed_hir" }
types = { path = "../types" }