[package]
name = "typed_hir"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
id = { path = "../id" }
interner = { path = "../interner" }
macros = { path = "../macros" }
span = { path = "../span" }
types = { path = "../types" }

serde = { version = "1.0.197", features = ["derive"] }
